fixed alignment issues and overall readability

--- a/client/css/main.less
+++ b/client/css/main.less
@@ -13,12 +13,21 @@ body {
 .my-course-title, .my-course-challenges, .my-course-score {
   display: inline-block;
 }
-.my-course-title, .my-course-score {
-  height: inherit;
+.my-course-title {
   width: 24%;
 }
+.my-course-score {
+  width: 14%
+}
 .my-course-challenges {
-  width: 49%;
+  text-align: left;
+  width: 59%;
+}
+.my-course-challenges > .list-inline {
+  margin-bottom: 0 !important;
+}
+.my-course-challenges > .list-inline > li {
+  vertical-align: middle;
 }
 .my-course-title {
   text-align: left;
